# bonus

./: admin.py  app.py  extensions.py  face_auth.py  forms.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  utils.py
logs/: customer_bonus.log.1  customer_bonus.log.2  customer_bonus.log.3
static/css/: custom.css
static/js/: main.js
templates/: admin_login.html  base.html  dashboard.html  gift_selection.html  login.html  register.html  settings.html
templates/admin/: master.html
templates/errors/: 404.html  500.html
