[project]
name = "repl-nix-bonusmanager360"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask==2.2.5",
    "psycopg2-binary>=2.9.10",
    "pillow==9.5.0",
    "flask-login==0.6.2",
    "flask-wtf==1.1.1",
    "wtforms==2.3.3",
    "flask-sqlalchemy==3.0.3",
    "sqlalchemy==2.0.16",
    "flask-admin==1.6.1",
    "werkzeug==2.2.3",
    "mysql-connector-python>=9.1.0",
    "pymysql>=1.1.1",
    "flask-sse>=1.0.0",
    "redis>=5.2.0",
    "flask-bootstrap>=3.3.7.1",
]
